# etl-airflow

./: README.md  pyproject.toml
data/raw/: retail_sales_dataset.csv
etl/: database.sql  dwh_design.sql  extract.py  load.py  transform.py
pipelines/: driver.py
sql/: create_tables.sql  queries.sql  transformations.sql
