[project]
name = "parcial-3-bodegas"
version = "0.1.0"
description = "Retail Sales Data Warehouse ETL Pipeline with Apache Airflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.43",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow==2.7.3",
    "apache-airflow-providers-postgres==5.7.1",
]
